--- a/disk-utils/Makefile.in
+++ b/disk-utils/Makefile.in
@@ -47,7 +47,7 @@ usrbinexec_PROGRAMS = fdformat$(EXEEXT) isosize$(EXEEXT) \
 @BUILD_ELVTUNE_TRUE@am__append_2 = elvtune.8
 @BUILD_RAW_TRUE@@HAVE_RAW_TRUE@am__append_3 = raw
 @BUILD_RAW_TRUE@@HAVE_RAW_TRUE@am__append_4 = raw.8
-@HAVE_ZLIB_TRUE@am__append_5 = fsck.cramfs mkfs.cramfs
+@BUILD_CRAMFS_TRUE@am__append_5 = fsck.cramfs mkfs.cramfs
 subdir = disk-utils
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/gettext.m4 \
@@ -61,8 +61,8 @@ mkinstalldirs = $(SHELL) $(top_srcdir)/config/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
 @BUILD_ELVTUNE_TRUE@am__EXEEXT_1 = elvtune$(EXEEXT)
-@HAVE_ZLIB_TRUE@am__EXEEXT_2 = fsck.cramfs$(EXEEXT) \
-@HAVE_ZLIB_TRUE@	mkfs.cramfs$(EXEEXT)
+@BUILD_CRAMFS_TRUE@am__EXEEXT_2 = fsck.cramfs$(EXEEXT) \
+@BUILD_CRAMFS_TRUE@	mkfs.cramfs$(EXEEXT)
 am__installdirs = "$(DESTDIR)$(sbindir)" "$(DESTDIR)$(usrbinexecdir)" \
 	"$(DESTDIR)$(man8dir)"
 sbinPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
@@ -79,7 +79,7 @@ fdformat_SOURCES = fdformat.c
 fdformat_OBJECTS = fdformat.$(OBJEXT)
 fdformat_LDADD = $(LDADD)
 am__fsck_cramfs_SOURCES_DIST = fsck.cramfs.c
-@HAVE_ZLIB_TRUE@am_fsck_cramfs_OBJECTS = fsck.cramfs.$(OBJEXT)
+@BUILD_CRAMFS_TRUE@am_fsck_cramfs_OBJECTS = fsck.cramfs.$(OBJEXT)
 fsck_cramfs_OBJECTS = $(am_fsck_cramfs_OBJECTS)
 fsck_cramfs_DEPENDENCIES =
 am_fsck_minix_OBJECTS = fsck.minix.$(OBJEXT)
@@ -95,9 +95,10 @@ am_mkfs_bfs_OBJECTS = mkfs.bfs.$(OBJEXT)
 mkfs_bfs_OBJECTS = $(am_mkfs_bfs_OBJECTS)
 mkfs_bfs_LDADD = $(LDADD)
 am__mkfs_cramfs_SOURCES_DIST = mkfs.cramfs.c
-@HAVE_ZLIB_TRUE@am_mkfs_cramfs_OBJECTS = mkfs.cramfs.$(OBJEXT)
+@BUILD_CRAMFS_TRUE@am_mkfs_cramfs_OBJECTS = mkfs.cramfs.$(OBJEXT)
 mkfs_cramfs_OBJECTS = $(am_mkfs_cramfs_OBJECTS)
-@HAVE_ZLIB_TRUE@mkfs_cramfs_DEPENDENCIES = $(top_srcdir)/lib/libmd5.a
+@BUILD_CRAMFS_TRUE@mkfs_cramfs_DEPENDENCIES =  \
+@BUILD_CRAMFS_TRUE@	$(top_srcdir)/lib/libmd5.a
 am_mkfs_minix_OBJECTS = mkfs.minix.$(OBJEXT)
 mkfs_minix_OBJECTS = $(am_mkfs_minix_OBJECTS)
 mkfs_minix_LDADD = $(LDADD)
@@ -137,6 +138,8 @@ AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
 BUILD_AGETTY_FALSE = @BUILD_AGETTY_FALSE@
 BUILD_AGETTY_TRUE = @BUILD_AGETTY_TRUE@
+BUILD_CRAMFS_FALSE = @BUILD_CRAMFS_FALSE@
+BUILD_CRAMFS_TRUE = @BUILD_CRAMFS_TRUE@
 BUILD_ELVTUNE_FALSE = @BUILD_ELVTUNE_FALSE@
 BUILD_ELVTUNE_TRUE = @BUILD_ELVTUNE_TRUE@
 BUILD_INIT_FALSE = @BUILD_INIT_FALSE@
@@ -197,8 +200,6 @@ HAVE_TERMCAP_FALSE = @HAVE_TERMCAP_FALSE@
 HAVE_TERMCAP_TRUE = @HAVE_TERMCAP_TRUE@
 HAVE_UUID_FALSE = @HAVE_UUID_FALSE@
 HAVE_UUID_TRUE = @HAVE_UUID_TRUE@
-HAVE_ZLIB_FALSE = @HAVE_ZLIB_FALSE@
-HAVE_ZLIB_TRUE = @HAVE_ZLIB_TRUE@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
@@ -292,10 +293,10 @@ man_MANS = blockdev.8 fdformat.8 isosize.8 mkfs.8 mkswap.8 \
 fsck_minix_SOURCES = fsck.minix.c
 mkfs_minix_SOURCES = mkfs.minix.c
 mkfs_bfs_SOURCES = mkfs.bfs.c
-@HAVE_ZLIB_TRUE@fsck_cramfs_SOURCES = fsck.cramfs.c
-@HAVE_ZLIB_TRUE@mkfs_cramfs_SOURCES = mkfs.cramfs.c
-@HAVE_ZLIB_TRUE@fsck_cramfs_LDADD = -lz
-@HAVE_ZLIB_TRUE@mkfs_cramfs_LDADD = -lz $(top_srcdir)/lib/libmd5.a
+@BUILD_CRAMFS_TRUE@fsck_cramfs_SOURCES = fsck.cramfs.c
+@BUILD_CRAMFS_TRUE@mkfs_cramfs_SOURCES = mkfs.cramfs.c
+@BUILD_CRAMFS_TRUE@fsck_cramfs_LDADD = -lz
+@BUILD_CRAMFS_TRUE@mkfs_cramfs_LDADD = -lz $(top_srcdir)/lib/libmd5.a
 @HAVE_UUID_TRUE@mkswap_LDADD = -luuid
 all: all-am
 
