--- a/login-utils/Makefile.in
+++ b/login-utils/Makefile.in
@@ -44,7 +44,7 @@ usrbinexec_PROGRAMS = $(am__EXEEXT_4) $(am__EXEEXT_5) $(am__EXEEXT_6) \
 sbin_PROGRAMS = $(am__EXEEXT_2) $(am__EXEEXT_3)
 usrsbinexec_PROGRAMS = $(am__EXEEXT_9)
 @BUILD_AGETTY_TRUE@am__append_1 = agetty
-@BUILD_AGETTY_TRUE@am__append_2 = agetty
+@BUILD_AGETTY_TRUE@am__append_2 = agetty.8
 @BUILD_INIT_TRUE@am__append_3 = simpleinit shutdown initctl
 @BUILD_INIT_TRUE@am__append_4 = fastboot.8 fasthalt.8 halt.8 reboot.8 simpleinit.8 shutdown.8 \
 @BUILD_INIT_TRUE@	initctl.8
@@ -193,6 +193,8 @@ AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
 BUILD_AGETTY_FALSE = @BUILD_AGETTY_FALSE@
 BUILD_AGETTY_TRUE = @BUILD_AGETTY_TRUE@
+BUILD_CRAMFS_FALSE = @BUILD_CRAMFS_FALSE@
+BUILD_CRAMFS_TRUE = @BUILD_CRAMFS_TRUE@
 BUILD_ELVTUNE_FALSE = @BUILD_ELVTUNE_FALSE@
 BUILD_ELVTUNE_TRUE = @BUILD_ELVTUNE_TRUE@
 BUILD_INIT_FALSE = @BUILD_INIT_FALSE@
@@ -253,8 +255,6 @@ HAVE_TERMCAP_FALSE = @HAVE_TERMCAP_FALSE@
 HAVE_TERMCAP_TRUE = @HAVE_TERMCAP_TRUE@
 HAVE_UUID_FALSE = @HAVE_UUID_FALSE@
 HAVE_UUID_TRUE = @HAVE_UUID_TRUE@
-HAVE_ZLIB_FALSE = @HAVE_ZLIB_FALSE@
-HAVE_ZLIB_TRUE = @HAVE_ZLIB_TRUE@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
