Imported from util-linux-2.13-pre4 tarball.

--- a/fdisk/Makefile.am
+++ b/fdisk/Makefile.am
@@ -1,5 +1,7 @@
 include $(top_srcdir)/config/include-Makefile.am
 
+if !M68K
+
 sbin_PROGRAMS = fdisk
 man_MANS = fdisk.8
 fdisk_SOURCES = fdisk.c llseek.c disksize.c fdiskbsdlabel.c fdisksgilabel.c \
@@ -23,6 +25,8 @@ man_MANS += cfdisk.8
 cfdisk_SOURCES = cfdisk.c llseek.c disksize.c i386_sys_types.c
 cfdisk_LDADD = -lncurses
 endif
+endif
+
 endif
 
 endif
